Ignore lint errors on CLI build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ android {
             path 'CMakeLists.txt'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 repositories {
     jcenter()
