Separate JNI glue from actual C code, move CMakeLists file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path 'CMakeLists.txt'
+            path 'src/main/jni/CMakeLists.txt'
         }
     }
 }
